--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,10 +2,10 @@ server.port=8080
 
 #connect to MySQL
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}/practica?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:practica.cgk6t0o3p5d4.us-east-1.rds.amazonaws.com}/practica?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=testpass
 
 #connect to MongoDB
-spring.data.mongodb.uri=mongodb+srv://root:testpass@practicaSpring.5ex9g.mongodb.net/?retryWrites=true&w=majority
+spring.data.mongodb.uri=mongodb+srv://root:testpass@practicaspring.uxoqa.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=practicaSpring
